# deadlink

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  example-output.txt  justfile  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
src/deadlink/: __about__.py  __init__.py  _check.py  _cli.py  _main.py  _replace_redirects.py
src/deadlink/_cli/: __init__.py  check.py  fix.py  replace_redirects.py
test/: test_check.py  test_cli.py  test_fix.py  test_solve.py  test_urlchk.py  test_urli.py
tests/: test_check.py  test_cli.py  test_replace_redirects.py
urlchk/: __about__.py  __init__.py  _cli.py  _main.py  cli.py
urlchk/_cli/: __init__.py  chk.py
urli/: __about__.py  __init__.py  _main.py
urli/_cli/: __init__.py  check.py  chk.py  fix.py
wurl/: __about__.py  _main.py
wurl/_cli/: check.py  fix.py
