[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"

[project]
name = "deadlink"
authors = [{name = "Nico Schlömer", email = "nico.schloemer@gmail.com"}]
description = "Check and fix URLs in text files"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Utilities",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "appdirs",
  "httpx >= 0.20.0",
  "rich",
  "toml",
]

[project.urls]
Code = "https://github.com/nschloe/deadlink"
Issues = "https://github.com/nschloe/deadlink/issues"
Funding = "https://github.com/sponsors/nschloe"

[project.scripts]
deadlink = "deadlink:cli"
