[metadata]
name = urli
version = 0.2.2
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Check and fix URLs in text files
url = https://github.com/nschloe/urli/
project_urls =
    Code=https://github.com/nschloe/urli/
    Issues=https://github.com/nschloe/urli/issues/
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
packages = find:
install_requires =
    appdirs
    importlib_metadata;python_version<"3.8"
    httpx
    rich
    toml
python_requires = >=3.7

[options.entry_points]
console_scripts =
    urli-check = urli._cli:check
    urli-fix = urli._cli:fix
