[metadata]
name = wurl
version = 0.2.2
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Check and fix URLs in text files
url = https://github.com/nschloe/wurl/
project_urls =
    Code=https://github.com/nschloe/wurl/
    Issues=https://github.com/nschloe/wurl/issues/
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
packages = find:
install_requires =
    appdirs
    importlib_metadata;python_version<"3.8"
    httpx
    rich
    toml
python_requires = >=3.7

[options.entry_points]
console_scripts =
    wurl-check = wurl._cli:check
    wurl-fix = wurl._cli:fix
